fixed button alignment

--- a/app/scripts/view/question/_question.scss
+++ b/app/scripts/view/question/_question.scss
@@ -8,4 +8,8 @@
   .wrapped-question {
     white-space: pre-wrap;
   }
+
+  .btn-finish {
+    margin-right: 18px;
+  }
 }
